# enfw-tools

backup/disk2gz/: disk2gz.crontab
cron/dongfang_journal/: .gitignore  Cargo.toml  README.md  config.yaml
cron/dongfang_journal/src/: main.rs
cron/manong_weekly_agent/: Cargo.toml  README.md  config.yaml
cron/manong_weekly_agent/src/: main.rs
fun/fun_crawler/: works.js
fun/hacg_manager/: hacg_manager.py
fun/save_saver/: README.md  fake_reg.bat
misc/: classify.js  stage1st-proxy.js
mooc/: xuetangx-agent.js
music/: convert.sh  install.sh  package-lock.json  package.json  requirements.txt  tsconfig.json
music/src/: convert.ts
network/dnspod_ddns/: Cargo.toml  config.json  cronbat_example
network/dnspod_ddns/src/: main.rs
network/fastcopy/: fastcopy.sh
network/vs_proxy/: vs_proxy.py
office/: handWriting.vb
tampermonkey/: cnmooc-agent.js  jwts-simple.js  monitor.7z  zhihuishu-agent.js  zhihushu-auto.js
zhihushu-auto/: zhihushu-auto.js
