[package]
name = "manong_weekly_agent"
version = "0.1.0"
authors = ["lonelyhentai <master@evernightfireworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = "0.9.2"
lettre_email = "0.9.2"
curl = "0.4.28"
victoria-dom = "0.1.2"
serde = { version = "1.0.106", features = ["derive"] }
serde_yaml = "0.8.11"
chrono = "0.4.11"
clap = "2.33.0"
native-tls = "0.2.4"
