[package]
name = "dnspod_ddns"
version = "0.1.0"
authors = ["lonelyhentai <master@evernightfireworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.24"
json = "0.12.0"
dirs = "2.0.2"
chrono = "0.4.9"
